--- a/zad3/CMakeLists.txt
+++ b/zad3/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.23)
-project(zad2)
+cmake_minimum_required(VERSION 3.20)
+project(zad3)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(zad2 main.cpp)
+add_executable(zad3 main.cpp brudnopis.h)
